# codefox

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  README.md~  TODO  aclocal.m4  autogen.sh  codefox-0.02.tar.xz  config.h  config.h.in  config.status  configure  configure.in  libtool
autom4te.cache/: output.0  output.1  output.10  output.11  output.12  output.3  output.4  output.5  output.6  output.7  output.8  output.9  requests  traces.0  traces.1  traces.10  traces.11  traces.12  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
data/: Makefile  Makefile.am  Makefile.in  codefox.appdata.xml.in  codefox.desktop  codefox.desktop.in  codefox.pc  codefox.pc.in
icons/: Makefile  Makefile.am~  Makefile.in
icons/16x16/: Makefile  Makefile.am  Makefile.in
icons/24x24/: Makefile  Makefile.am  Makefile.in
icons/32x32/: Makefile  Makefile.am  Makefile.in
icons/48x48/: Makefile  Makefile.am~  Makefile.in
icons/scalable/: Makefile  Makefile.am  Makefile.in
po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.in~  codefox.pot  zh_CN.gmo  zh_CN.po  zh_CN.po1~
src/: Makefile  Makefile.am  Makefile.in  autoindent.c  autoindent.h  callback.c  callback.h  codefox  compile.c  compile.h  debug.c  debug.h  debugview.c  debugview.h  edithistory.c  edithistory.h  editor.c  editor.h  editorconfig.c  editorconfig.h  env.c  env.h  filetree.c  filetree.h  highlighting.c  highlighting.h  keywords.c  keywords.h  limits.h  main.c  misc.c  misc.h  prefix.c  prefix.h  project.c  project.h  search.c  search.h  staticcheck.c  staticcheck.h  (+6 more)
src/.deps/: autoindent.Po  callback.Po  compile.Po  editor.Po  filetree.Po  highlighting.Po  main.Po  misc.Po  prefix.Po  staticcheck.Po  symbol.Po  tag.Po  ui.Po
template/: Makefile  Makefile.am  Makefile.am~  Makefile.in  codefox-create-file.ui.in  codefox-editor-settings.ui.in  codefox-fun-tip.ui.in  codefox-new-project.ui.in  codefox-project-settings.ui.in  codefox.ui  codefox.ui.in
