
bin_PROGRAMS = codefox
AM_CPPFLAGS  = @GTK_CFLAGS@
LDADD = @GTK_LIBS@
codefox_SOURCES = autoindent.c \
	autoindent.h \
	callback.c \
	callback.h \
	compile.c \
	compile.h \
	editor.c \
	editor.h \
	filetree.c \
	filetree.h \
	highlighting.c \
	highlighting.h \
	main.c \
	misc.c \
	misc.h \
	staticcheck.c \
	staticcheck.h \
	symbol.c \
	symbol.h \
	tag.c \
	tag.h \
	ui.c \
	ui.h \
	keywords.h \
	prefix.c \
	prefix.h
