
bin_PROGRAMS = codefox
AM_CPPFLAGS  = @GTK_CFLAGS@ `xml2-config --cflags`
AM_LDFLAGS = @GTK_LIBS@ `xml2-config --libs`
codefox_SOURCES = autoindent.c \
	autoindent.h \
	callback.c \
	callback.h \
	compile.c \
	compile.h \
	editor.c \
	editor.h \
	filetree.c \
	filetree.h \
	highlighting.c \
	highlighting.h \
	main.c \
	misc.c \
	misc.h \
	staticcheck.c \
	staticcheck.h \
	symbol.c \
	symbol.h \
	tag.c \
	tag.h \
	ui.c \
	ui.h \
	keywords.h \
	prefix.c \
	prefix.h \
	project.c \
	project.h \
	editorconfig.c \
	editorconfig.h \
	debug.c \
	debug.h \
	debugview.c \
	debugview.h \
	edithistory.c \
	edithistory.h \
	search.c \
	search.h
