iconsdir = $(datadir)/icons/hicolor/16x16
icons_appsdir = $(iconsdir)/apps
icons_actionsdir = $(iconsdir)/actions

dist_icons_apps_DATA =							\
	codefox.png

dist_icons_actions_DATA =						\
	codefox-build.png								\
	codefox-run.png							\
	codefox-debug.png \
	codefox-error.png \
	codefox-warning.png \
	codefox-file.png \
	codefox-dir.png \
	codefox-function.png \
	codefox-variable.png \
	codefox-statuserror.png \
	codefox-statuswarning.png \
	codefox-statuspass.png \
	codefox-breakpoint.png \
	codefox-debugptr.png
